# X86_SBC

./: README.md
north_bridge/: .gitignore  CMakeLists.txt  view_vcd.sh
north_bridge/HDL/: north_bridge.v
north_bridge/inc/: main.hpp  tests.hpp
north_bridge/src/: main.cpp  tests.cpp
